# ChessBackend

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
chessbackend/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
chessbackend/factories/: __init__.py  game_factory.py  user_factory.py
chessbackend/migrations/: 0001_initial.py  0002_alter_game_managers_alter_move_managers_and_more.py  0002_alter_game_starting_position.py  0003_piece_captured_piece_captured_by_and_more.py  0004_move_move_color.py  0005_game_black_check_pieces_game_black_in_check_and_more.py  0006_piece_defended.py
chessbackend/models/: __init__.py  base.py  enums.py  game.py  move.py  piece.py  user.py
chessbackend/models/tests/: test_game.py
chessbackend/tests/: utils.py
endpoints/serializers/: game.py
endpoints/tests/: test_login.py
endpoints/tests/mixins/: endpoint_test_mixin.py
endpoints/views/: game.py  login.py
