[tool.poetry]
name = "chess-be"
version = "0.1.0"
description = ""
authors = ["Matthew Marelli <mattmarelli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^80.9.0"
Django = "^5.2.3"
djangorestframework = "^3.16.0"
ruff = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
